@@ -43,17 +43,17 @@
 	</rectitle>
 
 	<progressbar>
-		<area condition="not{timeshift}" x="2%" y="87%" width="96%" height="3%" layer="3">
+		<area condition="not{timeshift}" x="2%" y="{areaheight}*0.8685" width="96%" height="3%" layer="3">
 			<drawimage x="0" y="0" width="{current}/{total}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayProgress" />
 		</area>
-		<area condition="{timeshift}" x="2%" y="87%" width="96%" height="3%" layer="3">
+		<area condition="{timeshift}" x="2%" y="{areaheight}*0.8685" width="96%" height="3%" layer="3">
 			<drawimage x="0" y="0" width="{total}/{timeshifttotal}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayTimeshift" />
 			<drawimage x="0" y="0" width="{current}/{timeshifttotal}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayProgress" />
 		</area>
 	</progressbar>
 
 	<cutmarks>
-		<area condition="not{timeshift}" x="2%" y="87%" width="96%" height="3%" layer="4">
+		<area condition="not{timeshift}" x="2%" y="{areaheight}*0.8685" width="96%" height="3%" layer="4">
 			<loop name="marks" x="0" y="0" orientation="absolute">
 				<!-- draw mark -->
 				<drawrectangle condition="not{marks[active]}" x="{marks[position]}/{marks[total]}*{areawidth}" y="0" width="1" height="100%" color="{clrBlack}" />
