@@ -2,6 +2,7 @@ shady-skin Revision History
 ----------------------------------
 
 2016-02-23:
+- Adjusted y-values of progressbar in displayreplay
 - Added graphics for progressbars
 
 2016-02-22:
